<resources>
    <string name="app_name">SnowyApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_play">Play</string>
    <string name="title_settings">Settings</string>
    <string name="title_edu">Homework</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_homework">Homework</string>
    <string name="tab_planned">Planned</string>
    <string name="tab_done">Done</string>
</resources>