<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="space.irsi7.snowyapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_homework"
        android:name="space.irsi7.snowyapp.ui.homework.HomeworkFragment"
        android:label="@string/title_homework"
        tools:layout="@layout/fragment_homework" />

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="space.irsi7.snowyapp.ui.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/navigation_play"
        android:name="space.irsi7.snowyapp.ui.play.PlayFragment"
        android:label="@string/title_play"
        app:itemRippleColor="@null"
        tools:layout="@layout/fragment_play" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="space.irsi7.snowyapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        app:itemRippleColor="@null"
        tools:layout="@layout/fragment_settings" />

</navigation>